--- a/.env.example
+++ b/.env.example
@@ -2,5 +2,5 @@
 # Clé API Gemini (Gérée par la plateforme)
 GEMINI_API_KEY=
 
-# ID Éditeur Google AdSense (ex: ca-pub-1234567890123456)
-VITE_ADSENSE_PUB_ID=
+# ID Éditeur Google AdSense (ex: 8106079340317111)
+VITE_ADSENSE_PUB_ID=8106079340317111
